# conv-utils

./: .gitignore  .gitmodules  CMakeLists.txt  Converter-Utilities.sln  README.md
.github/workflows/: GenerateRelease.yml
ConverterLib/: Argument.hpp  ConverterColorPalette.hpp  ConverterLib.vcxitems  ConverterLib.vcxitems.filters  OutputHelper.hpp  Printer.hpp  base.hpp  binary.hpp  data.hpp  hex.hpp  modulo.hpp
Unit Testing/: Unit Testing.vcxproj  Unit Testing.vcxproj.filters  base_Test.hpp  data_Test.hpp  modulo_Test.hpp  pch.h  test.cpp
UnitTests/: UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  pch.h  test-utils.hpp
UnitTests/resources/: data-units.txt
conv/: Argument.hpp  CMakeLists.txt  CompileHelpDoc.hpp  MathParse.hpp  Mode.hpp  PrintableEquation.hpp  Printer.hpp  conv.vcxproj  conv.vcxproj.filters  main.cpp
conv2/: CMakeLists.txt  StreamFormatter.hpp  globals.h  main.cpp  operators.hpp
convlib/: CMakeLists.txt  ConverterColorPalette.hpp  MathParse.hpp  Printer.hpp
convlib/include/: FOV.hpp  OutputHelper.hpp  Printer.hpp  ascii.hpp  base.hpp  bitwise.hpp  converter.hpp  data.hpp  exponents.hpp  length.hpp  metric.hpp  modulo.hpp  radians.hpp  temperature.hpp  unit.hpp
convlib/include/tokenizers/: bitwise.hpp
